--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
 <body style="background-color: cerulean;">
     <h1>Hanifan</h1>
     <p>DEVELOPMENT TEST</p>
+    <p>CAPSTIOONE PRESENTATION TEST</p>
+
     <!--<iframe width="1029" height="772" src="https://www.youtube.com/embed/rl0czzipZhk?autoplay=1" title="kodok lompat acumalaka" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
 </body>
 </html>
